feat(api): Returns all annotations for each deployments
